# Resume_Manager_AI

./: README.md
resume_manager/: README.md  pyproject.toml
resume_manager/src/resume_manager/: crew.py  main.py
