[project]
name = "resume_manager"
version = "0.1.0"
description = "Resume_Manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.0"
]

[project.scripts]
resume_manager = "resume_manager.main:run"
run_crew = "resume_manager.main:run"
train = "resume_manager.main:train"
replay = "resume_manager.main:replay"
test = "resume_manager.main:test"
run_with_trigger = "resume_manager.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
